	- Fix Bubble Curtain launcher NRE.
	- 'Infinite Ordinance' now applies to Countermeasure droppers.
	- Adjust cmThreshold timing for SLW countermeasures to 5x time set in WM to account for torpedoes being substantially slower than missiles.
	  This should allow proper CM behavior against both torpedoes and missiles without compromising one or the other.
- Weapons:
	- Adjust bullet tracers to lead up to their current position instead of from their previous position.
	- Reduce bullet tracer visual glitching due to krakensbane adjustments.
	- Weapons will now properly report Ammo Depleted when ammo remaining is less than amount required to fire.
	- Fix weapons refusing to fire when one shot left when using multiple ammo boxes with differing starting ammo amounts due to floating point errors.
	- Explosive beehive submunition explosion FX now scaled based on submunition tntMass, not parent HE VFX.
	- Fix weapons with reload animations adding an extra 1-20s to the reload time, based on fire anim length.
	- Add new 'postFireChargeAnim' field for weapons with charge animations to specify if the animation should play in reverse to deactivate the weapon after firing.
	- Fix weapons with reload sounds using oneShotSound = false immediately stopping the SFX when switching to a different weapon.
	- Fix weapons with spindown anims when they stop firing that have overheated under AI control not spinning down until they've cooled down.
	- Fix Electrolaser NRE when firing on a target vessel.
	- Missiles:
		- Add 'cruiseRangeTrigger' field to Missiles. Missiles using this will delay firing Cruise motor until within set distance to target.
		- Tweak acoustic propagation loss rate for passive acoustic torpedoes, should have a bit further effective detection range now.
		- Fix INS guidance ordinance not configured with a datalink immediately triggering the lost lock condition and self-destructing.
		- Passive Sonar torpedoes now home in on loudest part, not COM.