@@ -52,7 +52,8 @@ PART
 	MODULE
 	{
 		name = RadarWarningReceiver
-		omniDetection = true
+		omniDetection = true //if RWR can detect everything, or only radar missiles
+		fieldOfView = 360 //FoV of RWR, default 360 deg.
 	}
 
 	MODULE
