@@ -26,6 +26,9 @@
 	- 'Infinite Ordinance' now applies to Countermeasure droppers.
 	- Adjust cmThreshold timing for SLW countermeasures to 5x time set in WM to account for torpedoes being substantially slower than missiles.
 	  This should allow proper CM behavior against both torpedoes and missiles without compromising one or the other.
+- Detectors:
+	- RWR no longer clamped to visual FOV for detecting incoming missiles.
+	- Add new fieldOfView field to RadarWarningReceiver module to set custom RWR FOV.
 - Weapons:
 	- Adjust bullet tracers to lead up to their current position instead of from their previous position.
 	- Reduce bullet tracer visual glitching due to krakensbane adjustments.
@@ -41,7 +44,7 @@
 		- Add 'cruiseRangeTrigger' field to Missiles. Missiles using this will delay firing Cruise motor until within set distance to target.
 		- Tweak acoustic propagation loss rate for passive acoustic torpedoes, should have a bit further effective detection range now.
 		- Fix INS guidance ordinance not configured with a datalink immediately triggering the lost lock condition and self-destructing.
-		- Passive Sonar torpedoes now home in on loudest part, not COM.
+		- Passive Sonar torpedoes now home in on loudest part, not COM. Respects targetCoM override in the .cfg.
 		- Fix Terminal Guidance Passive Sonar torpedoes not entering terminal guidance.
 - RWP:
 	- For S6R10, GM kill craft that lack propulsion and are significantly beyond the asteroid field radius.
